adding initial control-sidebar support

--- a/src/scss/parts/_core.scss
+++ b/src/scss/parts/_core.scss
@@ -11,6 +11,7 @@
 @import "../sidebar-collapse";
 // @import "../sidebar-horizontal";
 @import "../sidebar-close";
+@import "../control-sidebar";
 @import "../content-wrapper";
 @import "../content-header";
 @import "../content";
