--- a/src/scss/bootstrap-dark/_reboot.scss
+++ b/src/scss/bootstrap-dark/_reboot.scss
@@ -10,8 +10,8 @@
 // Body
 
 body {
-  color: var(--#{$variable-prefix}body-color-alt);
-  background-color: var(--#{$variable-prefix}body-bg-alt); // 2
+  color: var(--#{$variable-prefix}body-color);
+  background-color: var(--#{$variable-prefix}body-bg); // 2
 }
 
 
